--- a/examples/demo-18.html
+++ b/examples/demo-18.html
@@ -24,6 +24,7 @@ KE.plugin['remote_image'] = {
         var dialog = new KE.dialog({
             id : id,
             cmd : 'remote_image',
+            file : '../examples/remote_image.html',
             width : 310,
             height : 90,
             title : KE.lang['image'],
