--- a/examples/index.html
+++ b/examples/index.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <title>KindEditor</title>
-        <style type="text/css" rel="stylesheet">
-            body {
-                font-size: 12px;
-                font-family: Courier New;
-            }
-            li {
-                margin: 5px;
-            }
-        </style>
-    </head>
-    <body>
-        <h4>KindEditor演示</h4>
-        <ol>
-            <li><a href="./demo-01.html" target="_blank">demo-01.html</a> (默认模式)</li>
-            <li><a href="./demo-02.html" target="_blank">demo-02.html</a> (简单模式)</li>
-            <li><a href="./demo-03.html" target="_blank">demo-03.html</a> (手动加载编辑器)</li>
-            <li><a href="./demo-04.html" target="_blank">demo-04.html</a> (默认模式为代码模式、没有指定CSS)</li>
-            <li><a href="./demo-05.html" target="_blank">demo-05.html</a> (手动添加Onsubmit事件)</li>
-            <li><a href="./demo-06.html" target="_blank">demo-06.html</a> (只能调整高度, 禁止拖动改变大小)</li>
-            <li><a href="./demo-07.html" target="_blank">demo-07.html</a> (编辑器在relative对象内)</li>
-            <li><a href="./demo-08.html" target="_blank">demo-08.html</a> (一个页面多个编辑器)</li>
-            <li><a href="./demo-09.html" target="_blank">demo-09.html</a> (TinyMCE风格)</li>
-            <li><a href="./demo-10.html" target="_blank">demo-10.html</a> (编辑器在在iframe内)</li>
-            <li><a href="./demo-11.html" target="_blank">demo-11.html</a> (在IE回车时插入BR、统计字数)</li>
-            <li><a href="./demo-12.html" target="_blank">demo-12.html</a> (JavaScript动态创建编辑器)</li>
-            <li><a href="./demo-13.html" target="_blank">demo-13.html</a> (未开启过滤模式)</li>
-            <li><a href="./demo-14.html" target="_blank">demo-14.html</a> (清空内容,插入内容)</li>
-            <li><a href="./demo-15.html" target="_blank">demo-15.html</a> (只读模式)</li>
-            <li><a href="./demo-16.html" target="_blank">demo-16.html</a> (全屏模式)</li>
-            <li><a href="./demo-17.html" target="_blank">demo-17.html</a> (自定义插件 - 您好)</li>
-            <li><a href="./demo-18.html" target="_blank">demo-18.html</a> (自定义插件 - 插入远程图片)</li>
-        </ol>
-    </body>
+	<head>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<title>KindEditor</title>
+		<style type="text/css" rel="stylesheet">
+			body {
+				font-size: 12px;
+				font-family: Courier New;
+			}
+			li {
+				margin: 5px;
+			}
+		</style>
+	</head>
+	<body>
+		<h4>KindEditor演示</h4>
+		<ol>
+			<li><a href="./demo-01.html" target="_blank">demo-01.html</a> (默认模式)</li>
+			<li><a href="./demo-02.html" target="_blank">demo-02.html</a> (简单模式)</li>
+			<li><a href="./demo-03.html" target="_blank">demo-03.html</a> (手动加载编辑器)</li>
+			<li><a href="./demo-04.html" target="_blank">demo-04.html</a> (默认模式为代码模式、没有指定CSS)</li>
+			<li><a href="./demo-05.html" target="_blank">demo-05.html</a> (手动添加Onsubmit事件、手动添加CSS文件)</li>
+			<li><a href="./demo-06.html" target="_blank">demo-06.html</a> (只能调整高度, 禁止拖动改变大小)</li>
+			<li><a href="./demo-07.html" target="_blank">demo-07.html</a> (插入图片时允许浏览服务器)</li>
+			<li><a href="./demo-08.html" target="_blank">demo-08.html</a> (回车换行设置)</li>
+			<li><a href="./demo-09.html" target="_blank">demo-09.html</a> (TinyMCE风格)</li>
+			<li><a href="./demo-10.html" target="_blank">demo-10.html</a> (编辑器在在iframe内)</li>
+			<li><a href="./demo-11.html" target="_blank">demo-11.html</a> (统计字数)</li>
+			<li><a href="./demo-12.html" target="_blank">demo-12.html</a> (JavaScript动态创建编辑器)</li>
+			<li><a href="./demo-13.html" target="_blank">demo-13.html</a> (未开启过滤模式)</li>
+			<li><a href="./demo-14.html" target="_blank">demo-14.html</a> (清空内容,插入内容)</li>
+			<li><a href="./demo-15.html" target="_blank">demo-15.html</a> (只读模式)</li>
+			<li><a href="./demo-16.html" target="_blank">demo-16.html</a> (全屏模式)</li>
+			<li><a href="./demo-17.html" target="_blank">demo-17.html</a> (自定义插件 - 您好)</li>
+			<li><a href="./demo-18.html" target="_blank">demo-18.html</a> (自定义插件 - 插入远程图片)</li>
+			<li><a href="./demo-19.html" target="_blank">demo-19.html</a> (URL设置)</li>
+			<li><a href="./demo-20.html" target="_blank">demo-20.html</a> (设置回调函数)</li>
+		</ol>
+	</body>
 </html>
