--- a/plugins/plainpaste.html
+++ b/plugins/plainpaste.html
@@ -4,21 +4,22 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>PlainPaste</title>
   <style type="text/css" rel="stylesheet">
-    body {
-    margin: 0px;
-    font-size:12px;
-    background-color:#F0F0EE;
-    }
-    #textArea {
-    width:320px;
-    height:250px;
-    border:1px solid #000000;
-    overflow: auto;
-    }
+	html, body {
+	padding: 0;
+	margin: 0;
+	font-size:12px;
+	background-color:#F0F0EE;
+	}
+	#textArea {
+	width:390px;
+	height:250px;
+	border:1px solid #000000;
+	overflow: auto;
+	}
   </style>
 </head>
 <body>
 <div style="margin-bottom:10px;">请使用快捷键(Ctrl+V)把内容粘贴到下面的方框里。</div>
-<textarea id="textArea" style="width:320px;height:250px;border:1px solid #000000;"></textarea>
+<textarea id="textArea"></textarea>
 </body>
 </html>
