--- a/examples/demo-08.html
+++ b/examples/demo-08.html
@@ -16,21 +16,24 @@
   <script type="text/javascript">
     KE.show({
         id : 'content1',
-        cssPath : './index.css'
+        cssPath : './index.css',
+		newlineTag : 'br' //默认模式
     });
-    KE.show({
+	KE.show({
         id : 'content2',
-        cssPath : './index.css'
+        cssPath : './index.css',
+		newlineTag : 'p'
     });
   </script>
 </head>
 <body>
-  <h3>一个页面多个编辑器</h3>
+  <h3>回车BR换行</h3>
   <div class="editor">
-    <textarea id="content1" name="content" style="width:700px;height:100px;visibility:hidden;"></textarea>
+    <textarea id="content1" name="content" style="width:700px;height:200px;visibility:hidden;"></textarea>
   </div>
+  <h3>回车P换行</h3>
   <div class="editor">
-    <textarea id="content2" name="content" style="width:80%;height:100px;visibility:hidden;"></textarea>
+    <textarea id="content2" name="content" style="width:700px;height:200px;visibility:hidden;"></textarea>
   </div>
 </body>
 </html>
