--- a/plugins/wordpaste.html
+++ b/plugins/wordpaste.html
@@ -4,32 +4,35 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>WordPaste</title>
   <style type="text/css" rel="stylesheet">
-    body {
-    font-size:12px;
-    margin: 0px;
-    background-color:#F0F0EE;
-    }
-    #wordIframe {
-    width:320px;
-    height:250px;
-    border:1px solid #000000;
-    }
+	html, body {
+	padding: 0;
+	margin: 0;
+	font-size:12px;
+	margin: 0px;
+	background-color:#F0F0EE;
+	}
+	#wordIframe {
+	width:390px;
+	height:250px;
+	border:1px solid #000000;
+	}
   </style>
   <script type="text/javascript">
-    function setIframe() {
-        var iframe = parent.KE.$('wordIframe', document);
-        var iframeDoc = parent.KE.util.getIframeDoc(iframe);
-        iframeDoc.designMode = "On";
-        iframeDoc.open();
-        iframeDoc.write('<html><head><title>WordPaste</title></head>');
-        iframeDoc.write('<body style="background-color:#FFFFFF;font-size:12px;margin:2px;" />');
-        if (parent.KE.browser != 'IE') iframeDoc.write('<br />');
-        iframeDoc.write('</body></html>');
-        iframeDoc.close();
-    }
+	var KE = parent.KE;
+	KE.event.ready(function() {
+		var iframe = KE.$('wordIframe', document);
+		var iframeDoc = KE.util.getIframeDoc(iframe);
+		iframeDoc.designMode = "On";
+		iframeDoc.open();
+		iframeDoc.write('<html><head><title>WordPaste</title></head>');
+		iframeDoc.write('<body style="background-color:#FFFFFF;font-size:12px;margin:2px;" />');
+		if (KE.browser != 'IE') iframeDoc.write('<br />');
+		iframeDoc.write('</body></html>');
+		iframeDoc.close();
+	}, window, document);
   </script>
 </head>
-<body onload="javascript:setIframe();">
+<body>
   <div style="margin-bottom:10px;">请使用快捷键(Ctrl+V)把内容粘贴到下面的方框里。</div>
   <iframe id="wordIframe" name="wordIframe" frameBorder="0"></iframe>
 </body>
