--- a/test/general.html
+++ b/test/general.html
@@ -4,35 +4,40 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>KindEditor 3.2</title>
   <style type="text/css" rel="stylesheet">
-    form {
-    margin: 0;
-    }
-    .editor {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    }
+	form {
+	margin: 0;
+	}
+	.editor {
+	margin-top: 5px;
+	margin-bottom: 5px;
+	}
   </style>
   <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
   <script type="text/javascript">
-    KE.show({
-        id : 'content1',
-        cssPath : './../examples/index.css'
-    });
+	KE.show({
+		id : 'content1',
+		cssPath : './../examples/index.css',
+		afterCreate : function() {
+			KE.event.input(KE.g['content1'].iframeDoc, function() {
+				document.getElementById('content_html').value = KE.util.getData('content1');
+			});
+		}
+	});
   </script>
 </head>
 <body>
   <h3>默认模式</h3>
   <form name="example" method="post" action="./../php/demo.php">
-    <div class="editor">
-      <textarea id="content1" name="content" style="width:900px;height:500px;visibility:hidden;">
+	<div class="editor">
+	  <textarea id="content1" name="content" style="width:900px;height:250px;visibility:hidden;">
 123456789<br />
-ABCDEFGHIJK<br />
-abcdefgh<br />
+AB<a href="http://wwwwwwwwwwwww">CDEFGHI</a>JK<br />
+<a href="http://wwwwwwwwwwwww">abcdefgh</a><br />
 <P><STRONG><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px">月下独酌</SPAN></STRONG><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px"> - 李白</SPAN></P>
 <P><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px">花间一壶酒，独酌无相亲。</SPAN></P>
 <P><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px">举杯邀明<U><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px">月，对影成</SPAN></U>三人。</SPAN></P>
 <P><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px">月既不解饮，影徒随我身。</SPAN></P>
-<P>暂伴月将影，行乐须及春。</P>
+<P><a href="http://wwwwwwwwwwwww">暂伴月将影，行乐须及春。</a></P>
 <P>我歌<font color="#ff0000">月徘徊</font>，我舞影零乱。</P>
 <P>醒时同交欢，醉后各<IMG border=0 src="http://localhost/roddy/plugins/emoticons/etc_14.gif">分散。</P>
 <P>永结无情游，相期邈云汉。<IMG border=0 src="http://localhost/roddy/plugins/emoticons/etc_14.gif"></P>
@@ -46,10 +51,12 @@ abcdefgh<br />
 <p>醒时同交欢，醉后各分散。</p>
 <p>永结无情游，相期邈云汉。</p>
 </textarea>
-    </div>
-    <input type="button" name="button" value="取得内容" onclick="javascript:alert(KE.util.getData('content1'));" />
-    <input type="button" name="button" value="取得纯文本" onclick="javascript:alert(KE.util.getPureData('content1'));" />
-    <input type="submit" name="button" value="提交内容" />
+
+<textarea id="content_html" style="width:900px;height:200px;"></textarea>
+	</div>
+	<input type="button" name="button" value="取得内容" onclick="javascript:alert(KE.util.getData('content1'));" />
+	<input type="button" name="button" value="取得纯文本" onclick="javascript:alert(KE.util.getPureData('content1'));" />
+	<input type="submit" name="button" value="提交内容" />
   </form>
 
   <div id="debug">
