--- a/test/relative.html
+++ b/test/relative.html
@@ -4,32 +4,31 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>KindEditor</title>
   <style type="text/css" rel="stylesheet">
-    form {
-    margin: 0;
-    }
-    .editor {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    }
-    div.relative {
-    position:relative;
-    }
+	form {
+	margin: 0;
+	}
+	.editor {
+	margin-top: 5px;
+	margin-bottom: 5px;
+	}
+	div.relative {
+	position:relative;
+	}
   </style>
   <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
   <script type="text/javascript">
-    KE.show({
-        id : 'content7',
-        cssPath : './index.css',
-        allowFileManager : true
-    });
+	KE.show({
+		id : 'content7',
+		cssPath : './index.css'
+	});
   </script>
 </head>
 <body>
-  <h3>插入图片时允许浏览服务器</h3>
+  <h3>编辑器在relative对象内</h3>
   <div class="relative">
-    <div class="editor">
-      <textarea id="content7" name="content" style="width:700px;height:300px;visibility:hidden;"></textarea>
-    </div>
+	<div class="editor">
+	  <textarea id="content7" name="content" style="width:700px;height:300px;visibility:hidden;"></textarea>
+	</div>
   </div>
 </body>
 </html>
