[trunk] Removed layer,date,time,preview,specialchar

--- a/examples/demo-09.html
+++ b/examples/demo-09.html
@@ -19,13 +19,13 @@
         skinType: 'tinymce',
         cssPath : './index.css',
         items : [
-            'source', 'preview', 'fullscreen', 'print', 'undo', 'redo', 'cut', 'copy', 'paste',
+            'source', 'fullscreen', 'print', 'undo', 'redo', 'cut', 'copy', 'paste',
             'plainpaste', 'wordpaste', 'justifyleft', 'justifycenter', 'justifyright',
             'justifyfull', 'insertorderedlist', 'insertunorderedlist', 'indent', 'outdent', 'subscript',
-            'superscript', 'date', 'time', 'specialchar', 'emoticons', 'link', 'unlink', '-',
+            'superscript', 'emoticons', 'link', 'unlink', '-',
             'title', 'fontname', 'fontsize', 'textcolor', 'bgcolor', 'bold',
             'italic', 'underline', 'strikethrough', 'removeformat', 'selectall', 'image',
-            'flash', 'media', 'layer', 'table', 'hr', 'about'
+            'flash', 'media', 'table', 'hr', 'about'
         ]
     });
   </script>
