[trunk] Fixed bug in IE6, Improved KE.browser

--- a/plugins/wordpaste.html
+++ b/plugins/wordpaste.html
@@ -26,7 +26,7 @@
 		iframeDoc.open();
 		iframeDoc.write('<html><head><title>WordPaste</title></head>');
 		iframeDoc.write('<body style="background-color:#FFFFFF;font-size:12px;margin:2px;" />');
-		if (KE.browser != 'IE') iframeDoc.write('<br />');
+		if (!KE.browser.IE) iframeDoc.write('<br />');
 		iframeDoc.write('</body></html>');
 		iframeDoc.close();
 	}, window, document);
