--- a/plugins/media.html
+++ b/plugins/media.html
@@ -41,6 +41,14 @@
 		vertical-align:middle;
 	}
   </style>
+  <script type="text/javascript">
+	var KE = parent.KE;
+	location.href.match(/\?id=([\w-]+)/i);
+	var id = RegExp.$1;
+	KE.event.ready(function() {
+		KE.util.hideLoadingPage(id);
+	}, window, document);
+  </script>
 </head>
 <body>
 	<div class="main">
