[trunk] Improved UI

--- a/plugins/link/link.html
+++ b/plugins/link/link.html
@@ -66,8 +66,8 @@
 	<div class="main">
 		<ul class="table">
 			<li>
-				<label for="hyperLink">URL</label>
-				<input type="text" id="hyperLink" name="hyperLink" value="http://" style="width:80%;" />
+				<label for="hyperLink">URL地址</label>
+				<input type="text" id="hyperLink" name="hyperLink" value="http://" style="width:90%;" />
 			</li>
 			<li>
 				<label for="linkType">打开类型</label>
