[trunk] Modified the value of filterMode to false

--- a/examples/demo-13.html
+++ b/examples/demo-13.html
@@ -18,12 +18,12 @@
         id : 'content1',
         width: '75%',
         cssPath : './index.css',
-        filterMode : false
+        filterMode : true
     });
   </script>
 </head>
 <body>
-  <h3>未开启过滤模式</h3>
+  <h3>开启过滤模式</h3>
   <form name="example" method="post" action="./../php/demo.php">
     <div class="editor">
       <textarea id="content1" name="content" style="width:700px;height:200px;visibility:hidden;"></textarea>
