--- a/examples/demo-14.html
+++ b/examples/demo-14.html
@@ -32,14 +32,15 @@
     <h3>清空内容,插入内容</h3>
     <div class="editor">
       <textarea id="content1" name="content" style="width:700px;height:400px;visibility:hidden;">
-        <strong>月下独酌</strong> - 李白<br /><br />
-        花间一壶酒，独酌无相亲。<br /><br />
-        举杯邀明月，对影成三人。<br /><br />
-        月既不解饮，影徒随我身。<br /><br />
-        暂伴月将影，行乐须及春。<br /><br />
-        我歌月徘徊，我舞影零乱。<br /><br />
-        醒时同交欢，醉后各分散。<br /><br />
-        永结无情游，相期邈云汉。<br /><br /></textarea>
+<strong>月下独酌</strong> - 李白<br />
+花间一壶酒，独酌无相亲。<br />
+举杯邀明月，对影成三人。<br />
+月既不解饮，影徒随我身。<br />
+暂伴月将影，行乐须及春。<br />
+我歌月徘徊，我舞影零乱。<br />
+醒时同交欢，醉后各分散。<br />
+永结无情游，相期邈云汉。<br />
+      </textarea>
     </div>
     <input type="button" name="button" value="清空内容" onclick="javascript:clearEditor('content1');" />
     <input type="button" name="button" value="插入HTML内容" onclick="javascript:insertHtml('content1', '<strong>测试内容</strong>');" />
