[trunk] Improved plugin of image

--- a/plugins/flash.html
+++ b/plugins/flash.html
@@ -59,11 +59,11 @@
 			</li>
 			<li>
 				<label for="width">宽度</label>
-				<input type="text" id="width" name="width" value="550" maxlength="4" style="width:50px;" /> px
+				<input type="text" id="width" name="width" value="550" maxlength="4" style="width:50px;text-align:right;" /> px
 			</li>
 			<li>
 				<label for="height">高度</label>
-				<input type="text" id="height" name="height" value="400" maxlength="4" style="width:50px;" /> px
+				<input type="text" id="height" name="height" value="400" maxlength="4" style="width:50px;text-align:right;" /> px
 			</li>
 		</ul>
 	</div>
