[trunk] Modified demo-02

--- a/examples/demo-02.html
+++ b/examples/demo-02.html
@@ -16,11 +16,12 @@
   <script type="text/javascript">
     KE.show({
         id : 'content2',
+		resizeMode : 1,
         cssPath : './index.css',
         items : [
-        'undo', 'redo', 'fontname', 'fontsize', 'textcolor', 'bgcolor', 'bold', 'italic', 'underline',
+        'fontname', 'fontsize', 'textcolor', 'bgcolor', 'bold', 'italic', 'underline',
         'removeformat', 'justifyleft', 'justifycenter', 'justifyright', 'insertorderedlist',
-        'insertunorderedlist']
+        'insertunorderedlist', 'image', 'link']
     });
   </script>
 </head>
