[trunk] Fixed bug where KE.format.getUrl(2)

--- a/test/format.html
+++ b/test/format.html
@@ -17,6 +17,7 @@
 			<input type="hidden" id="test03" name="test03" value="/ke/images/xxx.gif" style="width:100%" />
 			<input type="hidden" id="test04" name="test04" value="http://localhost/ke/images/xxx.gif" style="width:100%" />
 			<input type="hidden" id="test05" name="test05" value="http://www.163.com/images/xxx.gif" style="width:100%" />
+			<input type="hidden" id="test06" name="test06" value="http://kindsoft.net/kindeditor/plugins/emoticons/etc_01.gif" style="width:100%" />
 
 			<div id="test11"><span style="color:#FF0000;"><strong>test</strong></span></div>
 			<div id="test12">123<div style="color:#FF0000;background-color:#00FF00;font-size:18px;font-weight:bold;" class="spanclass">test</div>123</div>
