--- a/plugins/image/image.html
+++ b/plugins/image/image.html
@@ -18,6 +18,7 @@
 			}
 			#resetBtn {
 				margin-left:10px;
+				cursor:pointer;
 			}
 			.main {
 				margin: 10px;
@@ -205,10 +206,10 @@
 						</div>
 					</li>
 					<li>
-						<label for="imgWidth">图片尺寸</label>
+						<label for="imgWidth">图片大小</label>
 						宽 <input type="text" id="imgWidth" name="imgWidth" value="0" maxlength="4" style="width:50px;text-align:right;" />
 						高 <input type="text" id="imgHeight" name="imgHeight" value="0" maxlength="4" style="width:50px;text-align:right;" />
-						<input type="button" id="resetBtn" value="重置" />
+						<img src="./../../skins/common/refresh.gif" width="16" height="16" id="resetBtn" alt="重置大小" title="重置大小" />
 					</li>
 					<li>
 						<label>对齐方式</label>
