--- a/examples/demo-01.html
+++ b/examples/demo-01.html
@@ -25,6 +25,7 @@
   <form name="example" method="post" action="./../php/demo.php">
     <div class="editor">
       <textarea id="content1" name="content" style="width:700px;height:200px;visibility:hidden;">
+HTML可视化编辑器<br /><br />
 <img border="0" alt="" align="left" src="http://kindsoft.net/images/logo_180_30.gif" />
 </textarea>
     </div>
