[trunk] Moved path of refresh.gif

--- a/plugins/image/image.html
+++ b/plugins/image/image.html
@@ -212,7 +212,7 @@
 						<label for="imgWidth">图片大小</label>
 						宽 <input type="text" id="imgWidth" name="imgWidth" value="0" maxlength="4" style="width:50px;text-align:right;" />
 						高 <input type="text" id="imgHeight" name="imgHeight" value="0" maxlength="4" style="width:50px;text-align:right;" />
-						<img src="./../../skins/common/refresh.gif" width="16" height="16" id="resetBtn" alt="重置大小" title="重置大小" />
+						<img src="./images/refresh.gif" width="16" height="16" id="resetBtn" alt="重置大小" title="重置大小" />
 					</li>
 					<li>
 						<label>对齐方式</label>
